--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.16.4",
     "astro-portabletext": "^0.12.0",
     "framer-motion": "^12.23.25",
+    "lucide-astro": "^0.555.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
