--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.4.2",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.13.1",
+    "@sanity/image-url": "^2.0.2",
     "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
