--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.2",
     "@portabletext/types": "^3.0.0",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.13.1",
