--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "tailwind-animate": "^0.2.10"
+    "tailwind-animate": "^0.2.10",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
