--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,14 @@
     "lucide-astro": "^0.555.0",
     "lucide-react": "^0.555.0",
     "motion": "^12.26.2",
+    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-is": "^19.2.1",
     "resend": "^6.6.0",
     "sanity": "^4.20.3",
     "simplex-noise": "^4.0.3",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
